# Bastion

./: .gitignore  README.md  chars.py  dice.go  dice.py  go.mod  index.html  main.go  main.py  npc.go  npc.py  pyproject.toml  style.css
data/: careers.json  names.json  surnames.json  traits.json
old/: chars.py  dice.py  main.py
