[tool.poetry]
name = "bastion"
version = "0.1.0"
description = "cli generator for electric bastionland & into the odd"
authors = ["Cons Sh <umreen@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
